# rivt

./: CLAUDE.md  CMakeLists.txt  README.md  lsan_suppressions.txt  plan.md  todo.md
data/: rivt.desktop
src/: main.cpp
src/core/: config.cpp  config.h  debug.h  event_loop.cpp  event_loop.h  input_encoder.cpp  input_encoder.h  layout.cpp  layout.h  pane.cpp  pane.h  tab.h  tab_manager.cpp  tab_manager.h  types.h  util.cpp  util.h  window.cpp  window.h
src/platform/: platform.cpp  platform.h  x11_backend.cpp  x11_backend.h
src/pty/: pty.cpp  pty.h
src/render/: atlas.cpp  atlas.h  font.cpp  font.h  renderer.cpp  renderer.h
src/terminal/: image_store.cpp  image_store.h  kitty_graphics.cpp  kitty_graphics.h  screen_buffer.cpp  screen_buffer.h  vt_parser.cpp  vt_parser.h
src/tmux/: tmux_client.cpp  tmux_client.h  tmux_controller.cpp  tmux_controller.h
tests/: test.h  test_screen_buffer.cpp  test_vt_parser.cpp
